tests/invalid/html.err_exp
html.m:053: In clause for `init_body_elem =
html.m:053:   out(html.non_empty_list((html.top_body_elem)))':
html.m:053:   mode error: argument 1 had the wrong instantiatedness.
html.m:053:   Final instantiatedness of `HeadVar__1' was `unique',
html.m:053:   expected final instantiatedness was
html.m:053:     named inst non_empty_list(
html.m:053:       named inst top_body_elem,
html.m:053:       which expands to
html.m:053:         bound(
html.m:053:           text(ground)
html.m:053:         ;
html.m:053:           ul(
html.m:053:             named inst non_empty_list(
html.m:053:               named inst li(
html.m:053:                 named inst top_body_elem
html.m:053:               ),
html.m:053:               which expands to
html.m:053:                 bound(
html.m:053:                   li(
html.m:053:                     named inst non_empty_list(
html.m:053:                       named inst top_body_elem
html.m:053:                     ),
html.m:053:                     which expands to
html.m:053:                       bound(
html.m:053:                         '[|]'(
html.m:053:                           named inst top_body_elem
html.m:053:                         )
html.m:053:                       )
html.m:053:                   )
html.m:053:                 )
html.m:053:             ),
html.m:053:             which expands to
html.m:053:               bound(
html.m:053:                 '[|]'(
html.m:053:                   named inst li(
html.m:053:                     named inst top_body_elem
html.m:053:                   )
html.m:053:                 )
html.m:053:               )
html.m:053:           )
html.m:053:         )
html.m:053:     ),
html.m:053:     which expands to
html.m:053:       bound(
html.m:053:         '[|]'(
html.m:053:           named inst top_body_elem
html.m:053:         )
html.m:053:       ).
